feat: Update and refractor documentation
- Implemented BenFolderWatcher.py to monitor a specified folder and create animation subfolders upon new folder creation.
- Created accompanying PowerShell scripts for similar functionality.
- Added build checklist and markdown documentation for the folder watcher.
- Established a structured system for managing folder and file naming conventions.
- Developed a comprehensive system structure builder script for the Awesome Test Vault.
- Included various naming conventions and logging standards for consistency across the vault.

--- a/Vault/System/Documentation and Meta/🌟 Learning System/📊 System’s Progression Model/🎯 Quests/quest-metadata.yaml
+++ b/Vault/System/Documentation and Meta/🌟 Learning System/📊 System’s Progression Model/🎯 Quests/quest-metadata.yaml
@@ -1,15 +1,24 @@
 id: quest-XXXX
 title: ""
 type: quest
-version: 1.2
-status: active # options: active, planned, completed, archived
-priority: medium # options: low, medium, high
+version: 1.0
+status: active 
+# options: active, planned, completed, archived
 created: YYYY-MM-DD
 updated: YYYY-MM-DD
-tags: [quest, #tag1, #tag2]
-assigned_to: Charlie
+tags: [quest, tag1, tag2 ]
 related: []
 parent: ""
+children: []
+
+required_quests: []
+required_lessons: []
+required_badges: []
+required_nuggets: []
+required_skills: []
+required_items: []
+quest-status: active
+# options: locked, blocked, in-progress, active, completed, archived
 rewards:
   - XP: 20
   - Nugget: Bash Nugget
